--- a/docs/change_log/2_2_0.md
+++ b/docs/change_log/2_2_0.md
@@ -1,4 +1,4 @@
-# [v2.2.0](https://github.com/FISCO-BCOS/FISCO-BCOS/releases/tag/v2.2.0)
+# [记账节点](https://github.com/FISCO-BCOS/FISCO-BCOS/releases/tag/v2.2.0)
 
 ```eval_rst
 .. admonition:: v2.1.x升级到v2.2.0
