--- a/docs/change_log/2_1_0.md
+++ b/docs/change_log/2_1_0.md
@@ -1,4 +1,4 @@
-# [v2.1.0](https://github.com/FISCO-BCOS/FISCO-BCOS/releases/tag/v2.1.0)
+# [观察节点](https://github.com/FISCO-BCOS/FISCO-BCOS/releases/tag/v2.1.0)
 
 ```eval_rst
 .. admonition:: v2.0.x升级到v2.1.0
