--- a/docs/change_log/2_0_0.md
+++ b/docs/change_log/2_0_0.md
@@ -1,4 +1,4 @@
-# [v2.0.0](https://github.com/FISCO-BCOS/FISCO-BCOS/releases/tag/v2.0.0)
+# [游离节点](https://github.com/FISCO-BCOS/FISCO-BCOS/releases/tag/v2.0.0)
 
 ```eval_rst
 .. admonition:: v2.0.0-rc3升级到v2.0.0
